@@ -19,34 +19,21 @@ typedef struct sg_Matrix {
 
 sg_Matrix sg_Matrix_identity;
 
-/* Function: sg_Matrix_mul
-Multiplies two matrices together and returns the result.
-*/
 sg_Matrix sg_Matrix_mul(sg_Matrix a, sg_Matrix b);
 
-/* Function: sg_Vector3_mul_m
-Multiplies a vector by a matrix.
-*/
 sg_Vector4 sg_Vector4_mul_m(sg_Vector4 a, sg_Matrix b);
 
-/* Function: sg_Matrix_transform
-Transforms a given matrix by the given vector and returns the result.
-*/
-sg_Matrix sg_Matrix_transform(sg_Matrix m, sg_Vector3 t);
+sg_Matrix sg_Matrix_translate(sg_Vector3 t);
 
-/* Function: sg_Matrix_rotate_v
-Rotates the given matrix in a way similar to OpenGL's glRotate.
-*/
-sg_Matrix sg_Matrix_rotate_v(sg_Matrix m, float a, sg_Vector3 n);
+sg_Matrix sg_Matrix_rotate_v(float a, sg_Vector3 n);
 
-/* Function: sg_Matrix_scale
-Scales the given matrix by the given vector and returns it.
-*/
-sg_Matrix sg_Matrix_scale(sg_Matrix m, sg_Vector3 v); 
+sg_Matrix sg_Matrix_scale(sg_Vector3 v); 
 
 sg_Matrix sg_Matrix_perspective(double fovy, double aspect, double znear, double zfar);
 
-sg_Matrix sg_Matrix_rotate_q(sg_Matrix m, sg_Quaternion q);
+sg_Matrix sg_Matrix_rotate_q(sg_Quaternion q);
+
+int sg_Matrix_invert(sg_Matrix m, sg_Matrix* invOut);
 
 #endif
 
